@@ -31,7 +31,7 @@ short int matchpath(char *instr, char *path) {
 				if (*(instr - 1) == '/')
 					return 1;
 				if ((int)strlen(path) >= pos) {
-					if (*(path + pos) == '/')
+					if (*(path + pos) == '/' || *(path + pos) == '\0')
 						return 1;
 				} else
 					return 1;
